Fixed formatting issues